[Mac] Force macOS confirm window to front after default browser change.

When you use Chrome's infobar or Settings page to make Chrome your
default browser, macOS presents a confirmation dialog. Sometimes macOS
orders the dialog onscreen but behind the browser window, where it is
effectively invisible. Without confirmation via this dialog, macOS will
not change your default browser.

This cl forces the UI element responsible for the dialog to become
active after setting the default browser, bringing the confirmation
dialog to the foreground, in front of all windows.

Bug: 775281
Change-Id: I5376d57c088ea6b564d84cb3d35442a4330f954b